crates/squealy/tests/compile_fail/on_conflict_requires_postgres.stderr
error[E0277]: the trait bound `TestConnection: OnConflictQueryBuilder` is not satisfied
  --> tests/compile_fail/on_conflict_requires_postgres.rs:25:10
   |
25 |         .on_conflict(|user| user.id)
   |          ^^^^^^^^^^^ the trait `OnConflictQueryBuilder` is not implemented for `TestConnection`
   |
note: required by a bound in `__SquealyUserWriteBuilder::<'conn, Conn, Assignments, Filters, FilterState>::on_conflict`
  --> tests/compile_fail/on_conflict_requires_postgres.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyUserWriteBuilder::<'conn, Conn, Assignments, Filters, FilterState>::on_conflict`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
